// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportInfoButton handles button click flyout on click 1`] = `
<button
  aria-label="Show report info"
  className="euiButtonIcon euiButtonIcon--primary euiButtonIcon--empty euiButtonIcon--xSmall"
  data-test-subj="reportInfoButton"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  type="button"
>
  <EuiIcon
    aria-hidden="true"
    className="euiButtonIcon__icon"
    color="inherit"
    size="m"
    type="iInCircle"
  >
    <span
      aria-hidden="true"
      className="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="iInCircle"
      size="m"
    />
  </EuiIcon>
</button>
`;

exports[`ReportInfoButton opens flyout with fetch error info 1`] = `
Array [
  <EuiFlyout
    aria-labelledby="flyoutTitle"
    data-test-subj="reportInfoFlyout"
    onClose={[Function]}
    ownFocus={true}
    size="s"
  >
    <div
      data-eui="EuiFlyout"
      data-test-subj="reportInfoFlyout"
      role="dialog"
    >
      <button
        data-test-subj="euiFlyoutCloseButton"
        onClick={[Function]}
        type="button"
      />
      <EuiFlyoutHeader
        hasBorder={true}
      >
        <div
          className="euiFlyoutHeader euiFlyoutHeader--hasBorder"
        >
          <EuiTitle
            size="m"
          >
            <h2
              className="euiTitle euiTitle--medium"
              id="flyoutTitle"
            >
              Unable to fetch report info.
            </h2>
          </EuiTitle>
        </div>
      </EuiFlyoutHeader>
      <EuiFlyoutBody>
        <div
          className="euiFlyoutBody"
        >
          <div
            className="euiFlyoutBody__overflow"
            tabIndex={0}
          >
            <div
              className="euiFlyoutBody__overflowContent"
            >
              <EuiText>
                <div
                  className="euiText euiText--medium"
                >
                  Could not fetch the job info
                </div>
              </EuiText>
            </div>
          </div>
        </div>
      </EuiFlyoutBody>
    </div>
  </EuiFlyout>,
  <div
    data-eui="EuiFlyout"
    data-test-subj="reportInfoFlyout"
    role="dialog"
  >
    <button
      data-test-subj="euiFlyoutCloseButton"
      onClick={[Function]}
      type="button"
    />
    <EuiFlyoutHeader
      hasBorder={true}
    >
      <div
        className="euiFlyoutHeader euiFlyoutHeader--hasBorder"
      >
        <EuiTitle
          size="m"
        >
          <h2
            className="euiTitle euiTitle--medium"
            id="flyoutTitle"
          >
            Unable to fetch report info.
          </h2>
        </EuiTitle>
      </div>
    </EuiFlyoutHeader>
    <EuiFlyoutBody>
      <div
        className="euiFlyoutBody"
      >
        <div
          className="euiFlyoutBody__overflow"
          tabIndex={0}
        >
          <div
            className="euiFlyoutBody__overflowContent"
          >
            <EuiText>
              <div
                className="euiText euiText--medium"
              >
                Could not fetch the job info
              </div>
            </EuiText>
          </div>
        </div>
      </div>
    </EuiFlyoutBody>
  </div>,
]
`;

exports[`ReportInfoButton opens flyout with info 1`] = `
Array [
  <EuiFlyout
    aria-labelledby="flyoutTitle"
    data-test-subj="reportInfoFlyout"
    onClose={[Function]}
    ownFocus={true}
    size="s"
  >
    <div
      data-eui="EuiFlyout"
      data-test-subj="reportInfoFlyout"
      role="dialog"
    >
      <button
        data-test-subj="euiFlyoutCloseButton"
        onClick={[Function]}
        type="button"
      />
      <EuiFlyoutHeader
        hasBorder={true}
      >
        <div
          className="euiFlyoutHeader euiFlyoutHeader--hasBorder"
        >
          <EuiTitle
            size="m"
          >
            <h2
              className="euiTitle euiTitle--medium"
              id="flyoutTitle"
            >
              Report info
            </h2>
          </EuiTitle>
        </div>
      </EuiFlyoutHeader>
      <EuiFlyoutBody>
        <div
          className="euiFlyoutBody"
        >
          <div
            className="euiFlyoutBody__overflow"
            tabIndex={0}
          >
            <div
              className="euiFlyoutBody__overflowContent"
            >
              <EuiText>
                <div
                  className="euiText euiText--medium"
                />
              </EuiText>
            </div>
          </div>
        </div>
      </EuiFlyoutBody>
    </div>
  </EuiFlyout>,
  <div
    data-eui="EuiFlyout"
    data-test-subj="reportInfoFlyout"
    role="dialog"
  >
    <button
      data-test-subj="euiFlyoutCloseButton"
      onClick={[Function]}
      type="button"
    />
    <EuiFlyoutHeader
      hasBorder={true}
    >
      <div
        className="euiFlyoutHeader euiFlyoutHeader--hasBorder"
      >
        <EuiTitle
          size="m"
        >
          <h2
            className="euiTitle euiTitle--medium"
            id="flyoutTitle"
          >
            Report info
          </h2>
        </EuiTitle>
      </div>
    </EuiFlyoutHeader>
    <EuiFlyoutBody>
      <div
        className="euiFlyoutBody"
      >
        <div
          className="euiFlyoutBody__overflow"
          tabIndex={0}
        >
          <div
            className="euiFlyoutBody__overflowContent"
          >
            <EuiText>
              <div
                className="euiText euiText--medium"
              />
            </EuiText>
          </div>
        </div>
      </div>
    </EuiFlyoutBody>
  </div>,
]
`;
